// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01. Initial state 1`] = `
<EasyCompWrapper>
  <div>
    12:00:00 AM
  </div>
</EasyCompWrapper>
------------HTML PREVIEW---------------
<EasyCompWrapper>
  <div>
    12:00:00 AM
  </div>
</EasyCompWrapper>
`;

exports[`02. After 2 seconds 1`] = `
<EasyCompWrapper>
  <div>
    12:00:02 AM
  </div>
</EasyCompWrapper>
------------HTML PREVIEW---------------
<EasyCompWrapper>
  <div>
    12:00:02 AM
  </div>
</EasyCompWrapper>
`;

exports[`03. After 10.5 seconds 1`] = `
<EasyCompWrapper>
  <div>
    12:00:10 AM
  </div>
</EasyCompWrapper>
------------HTML PREVIEW---------------
<EasyCompWrapper>
  <div>
    12:00:10 AM
  </div>
</EasyCompWrapper>
`;
